--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <div>
                     <p><span>Кровельные и фасадные материалы</span> в Тюмени и области. <br /><br /> Профессиональный монтаж с 2010 года.</p>
                 </div>
-                <div class="price dotted"> <img class="icon" src="/img/price.svg" alt=""> Скачать прайс-каталог</div>
-                <div class="logo"><img src="/img/logo.svg" alt=""></div>
+                <div class="price dotted"> <img class="icon" src="https://inkognitod.github.io/paradigma.test/img/price.svg" alt=""> Скачать прайс-каталог</div>
+                <div class="logo"><img src="https://inkognitod.github.io/paradigma.test/img/logo.svg" alt=""></div>
                 <div class="soc">
                     <p>Отвечаем <span>онлайн</span></p>
                     <img src="/img/socs.png" alt=""> </div>
@@ -61,7 +61,7 @@
             <div class="main__right">
                 <div class="title">
                     <h1>Продажа <span>кровельных материалов</span> в Тюмени и Тюменской области </h1>
-                    <div class="subtitle"><img src="/img/circles.png" alt=""> и монтаж под ключ</div>
+                    <div class="subtitle"><img src="https://inkognitod.github.io/paradigma.test/img/circles.png" alt=""> и монтаж под ключ</div>
                     <div class="buttons">
                         <div class="cost">
                             <button class="cost__btn">Рассчитать стоимость материалов и монтажа</button>
@@ -70,7 +70,7 @@
                             <button class="popup__btn">записаться на просмотр объектов</button>
                         </div>
                     </div>
-                    <div class="gift"><img src="/img/gift.svg" alt="">
+                    <div class="gift"><img src="https://inkognitod.github.io/paradigma.test/img/gift.svg" alt="">
                         <span>Ответьте на несколько вопросов и получите</span> сметную стоимость и 3 подарка за экономию нашего времени
                     </div>
                 </div>
