--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             <div class="main__left">
                 <div class="blocs">
                     <div class="bloc"><span>Гарантия от 50 лет</span> на материалы и 5 лет на монтаж</div>
-                    <img src="/img/menu_shadow 2.png">
+                    <img src="https://inkognitod.github.io/paradigma.test/img/menu_shadow 2.png">
                     <div class="bloc"><span>Замер, монтажный проект</span> и еще 4 услуги бесплатно </div>
-                    <img src="/img/menu_shadow 2.png">
+                    <img src="https://inkognitod.github.io/paradigma.test/img/menu_shadow 2.png">
                     <div class="bloc"><span>Сметы точны</span> до копейки </div>
-                    <img src="/img/menu_shadow 2.png">
+                    <img src="https://inkognitod.github.io/paradigma.test/img/menu_shadow 2.png">
                     <div class="bloc"><span>Поэтапная оплата</span>, кредит или рассрочка </div>
-                    <img src="/img/menu_shadow 2.png">
+                    <img src="https://inkognitod.github.io/paradigma.test/img/menu_shadow 2.png">
                     <div class="bloc"><span>Наши крыши в каждом поселке</span> и дачном сообществе региона </div>
                 </div>
             </div>
